<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigationProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/navigation_profile" />

        <item
            android:id="@+id/navigationChat"
            android:icon="@drawable/ic_chat"
            android:title="@string/navigation_chat" />

        <item
            android:id="@+id/navigationMessage"
            android:icon="@drawable/ic_message"
            android:title="@string/navigation_message" />

    </group>

    <item android:title="@string/navigation_communicate">
        <menu>
            <item
                android:id="@+id/navigationSend"
                android:icon="@drawable/ic_send"
                android:title="@string/navigation_send" />

            <item
                android:id="@+id/navigationShare"
                android:icon="@drawable/ic_share"
                android:title="@string/navigation_share" />
        </menu>
    </item>


</menu>